--- a/src/SubPages/MarineServices.html
+++ b/src/SubPages/MarineServices.html
@@ -19,7 +19,7 @@
           </ul>
     <div class="container">
         <div class="column">
-            <h2>Column 1:</h2>
+            <h2>Visit us for this: </h2>
             <ul>
                 <li>Mechanical services (our location or yours)</li>
                 <li>Winterizing / Summerizing</li>
@@ -29,7 +29,7 @@
             </ul>
         </div>
         <div class="column">
-            <h2>Column 2:</h2>
+            <h2>Addtionally we can help with:</h2>
             <ul>
                 <li>Storage, winter, summer, or long-term</li>
                 <li>Shrink-wrap services (on site only)</li>
