Styling-Updates-For-Demo-Wk2

--- a/src/Index.html
+++ b/src/Index.html
@@ -11,22 +11,29 @@
 <body>
   <ul>
     <li>
-    <img src="../images/Float-Boat-Cert.png" />
+      <img src="../images/Float-Boat-Cert.png" />
     </li>
-    <a href="Index.html">Home</a>
-    <a href="Subpages/AboutUs.html">About Us</a>
-    <a href="SubPages/MarineServices.html">Services</a>
-    <a href="SubPages/Locations.html">Locations</a>
+      <a href="Index.html">Home</a>
+      <a href="Subpages/AboutUs.html">About Us</a>
+      <a href="SubPages/MarineServices.html">Services</a>
+      <a href="SubPages/Locations.html">Locations</a>
   </ul>
+  <br/>
   <div> <!--Placholder for Bootstrap snippet-->
   </div>
+
   <div class="image-container">
     <img  src="../images/Float-Boat-Header.jpeg" />
   </div>
-  <p style="text-align: center;">
-    Float Your Boat Again Repair Services is a nationally accredited, licensed, and insure marine repair organization.  We are committed to providing our customers with timely and affordable repairs and service.  Our customers will attest to our reliability and integrity as marine mechanics.  your can bring your boat to us or we can come to you.  Yes, we make house calls! (Italicized)
-    As a proud ABYC (both words bolded) member and Master Facility, our operations ensure high standards of quality and safety.  our personnel are trained in a wide variety of marine equipment and are committed to performing quality work in an industry where reliability and experience have grown increasingly difficult to secure.
+  <br/>
+
+  <p class="text-align-center">
+    Float Your Boat Again Repair Services is a nationally accredited, licensed, and insure marine repair organization.  We are committed to providing our customers with timely and affordable repairs and service.  Our customers will attest to our reliability and integrity as marine mechanics.  your can bring your boat to us or we can come to you.  
+    <i>Yes, we make house calls! </i>
+    
+    As a <b>proud ABYC</b> member and Master Facility, our operations ensure high standards of quality and safety.  our personnel are trained in a wide variety of marine equipment and are committed to performing quality work in an industry where reliability and experience have grown increasingly difficult to secure.
   </p>
+
   <script src="../src/JS-Shared/activities.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
