--- a/src/SubPages/Locations.html
+++ b/src/SubPages/Locations.html
@@ -26,5 +26,8 @@
     
     Nunc dapibus magna vitae justo feugiat, et volutpat magna bibendum. Integer pharetra nulla in ex dapibus sollicitudin. Suspendisse potenti. Proin id placerat ex, nec volutpat dui. Sed id leo nunc. Vivamus nec sagittis lacus, non sodales velit. Ut quis fermentum velit. Aliquam auctor justo quis mi ultrices, sed pellentesque velit dictum. Vestibulum suscipit turpis a tortor laoreet, et vehicula sapien tincidunt. Integer ullamcorper lacus non enim cursus, a congue mi commodo.
   </p>
+  <footer>
+    <a href="mailto:acox2@dom.edu">Contact Us!</a>
+  </footer>
 </body>
 </html>
