--- a/src/SubPages/MarineServices.html
+++ b/src/SubPages/MarineServices.html
@@ -39,5 +39,8 @@
             </ul>
         </div>
     </div>
+    <footer>
+        <a href="mailto:acox2@dom.edu">Contact Us!</a>
+    </footer>
     </body>
 </html>
