--- a/src/Index.html
+++ b/src/Index.html
@@ -28,12 +28,18 @@
   <br/>
 
   <p class="text-align-center">
-    Float Your Boat Again Repair Services is a nationally accredited, licensed, and insure marine repair organization.  We are committed to providing our customers with timely and affordable repairs and service.  Our customers will attest to our reliability and integrity as marine mechanics.  your can bring your boat to us or we can come to you.  
+    Float Your Boat Again Repair Services is a nationally accredited, licensed, and insure marine repair organization.  
+    We are committed to providing our customers with timely and affordable repairs and service.  
+    Our customers will attest to our reliability and integrity as marine mechanics.  your can bring your boat to us or we can come to you.  
     <i>Yes, we make house calls! </i>
-    
+  </p>
+  <p class="text-align-center">
     As a <b>proud ABYC</b> member and Master Facility, our operations ensure high standards of quality and safety.  our personnel are trained in a wide variety of marine equipment and are committed to performing quality work in an industry where reliability and experience have grown increasingly difficult to secure.
   </p>
-
+  <footer>
+    <a href="mailto:acox2@dom.edu">Contact Us!</a>
+  </footer>
+  
   <script src="../src/JS-Shared/activities.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
