Styling-Update-Wk2

--- a/src/Index.html
+++ b/src/Index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <title>Float Boat Marine Services</title>
 </head>
-<body>
+<body class="text-decoration-none">
   <ul>
-    <li>
-      <img src="../images/Float-Boat-Cert.png" />
-    </li>
+    <div class="text-decoration-none">
+      <img class="text-decoration-none" src="../images/Float-Boat-Cert.png" />
+    </div>
       <a href="Index.html">Home</a>
       <a href="Subpages/AboutUs.html">About Us</a>
       <a href="SubPages/MarineServices.html">Services</a>
