Class-Demo-Wk-2-Init

--- a/src/Index.html
+++ b/src/Index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" href="Styling.css">
+  <!--Demo directory nav to Bootstrap ref below:
+  <link rel="stylesheet" href="../">
+  -->
   <link rel="stylesheet" href="../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <title>Float Boat Marine Services</title>
 </head>
@@ -19,7 +22,7 @@
       <a href="SubPages/Locations.html">Locations</a>
   </ul>
   <br/>
-  <div> <!--Placholder for Bootstrap snippet-->
+  <div class="text-align-center"> <!--Placholder for Bootstrap snippet-->
   </div>
 
   <div class="image-container">
