Hello-Bootstrap-Btn-Added

--- a/src/Index.html
+++ b/src/Index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" href="Styling.css">
-  <!--Demo directory nav to Bootstrap ref below:
-  <link rel="stylesheet" href="../">
-  -->
+  <!--Demo directory nav to Bootstrap ref below: -->
   <link rel="stylesheet" href="../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <title>Float Boat Marine Services</title>
 </head>
@@ -23,6 +21,8 @@
   </ul>
   <br/>
   <div class="text-align-center"> <!--Placholder for Bootstrap snippet-->
+    <h1>Hello, Bootstrap!</h1>
+    <button class="btn btn-success" id="buttonClick">Click me to learn more! </button>
   </div>
 
   <div class="image-container">
