--- a/src/Pages/MarineServices.html
+++ b/src/Pages/MarineServices.html
@@ -5,18 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" href="../Styling.css">
+    <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <title>Marine Services</title>
 </head>
     <body>
-        <ul>
-            <li>
-            <img src="../../images/Float-Boat-Cert.png" />
-            </li>
-            <a href="../Index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="MarineServices.html">Services</a>
-            <a href="Locations.html">Locations</a>
-          </ul>
+     <!--Demo nav-bar switch as module -->
+    <div id="navContainer"></div>
     <div class="container">
         <div class="column">
             <h2 class="text-align-center">Visit us for this: </h2>
@@ -42,5 +36,6 @@
     <footer>
         <a href="mailto:acox2@dom.edu">Contact Us!</a>
     </footer>
+    <script src="../JS-Shared/nav-module.js"></script>
     </body>
 </html>
