--- a/src/Pages/AboutUs.html
+++ b/src/Pages/AboutUs.html
@@ -5,19 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" href="../Styling.css">
-  <title>Locations</title>
+  <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <title>About Us</title>
 </head>
 <body>
-  <ul>
-    <li>
-    <img src="../../images/Float-Boat-Cert.png" />
-    </li>
-    <a href="../Index.html">Home</a>
-    <a href="AboutUs.html">About Us</a>
-    <a href="MarineServices.html">Services</a>
-    <a href="Locations.html">Locations</a>
-  </ul>
-  <h1 class="text-align-center"> Locations </h1>
+  <!--Demo nav-bar switch as module -->
+  <div id="navContainer"></div>
+  <h1 class="text-align-center"> About Us </h1>
   <p class="text-align-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula ex sit amet sapien scelerisque, ac eleifend justo consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras porta vehicula orci. Duis ac odio nec elit vehicula efficitur sit amet nec orci. Phasellus id velit ac sapien tincidunt tempor. Sed vitae ipsum sit amet metus convallis rhoncus. Sed nec dolor sit amet mi convallis fermentum. Nulla facilisi. Vivamus vulputate non erat eu gravida. Suspendisse potenti. In hac habitasse platea dictumst. Mauris pharetra sit amet risus id vestibulum. Proin fermentum arcu non felis ullamcorper, a pulvinar neque gravida. Nullam efficitur tortor eu eros scelerisque, ac varius velit consectetur.
 
     Pellentesque eu purus scelerisque, mattis tortor non, consectetur tortor. Ut dapibus lacinia dolor, a ultricies tellus suscipit id. Donec feugiat erat ut dui consequat convallis. Mauris ut ante nec lacus tincidunt consequat. Quisque nec ipsum vitae libero iaculis luctus. Vestibulum sit amet felis sollicitudin, iaculis lorem non, aliquam velit. Nam quis massa sapien. Fusce sit amet vestibulum enim. Ut in lorem sapien. Cras et leo in ligula congue ultricies. Fusce ullamcorper dolor non mauris malesuada suscipit.
@@ -29,5 +23,8 @@
   <footer>
     <a href="mailto:acox2@dom.edu">Contact Us!</a>
   </footer>
-</body>
+  <script src="../JS-Shared/nav-module.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
