--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -4,21 +4,15 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <link rel="stylesheet" href="Styling.css">
+  <link rel="stylesheet" href="../Styling.css">
   <!--Demo directory nav to Bootstrap ref below: -->
-  <link rel="stylesheet" href="../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <title>Float Boat Marine Services</title>
 </head>
 <body class="text-decoration-none">
-  <ul>
-    <div class="text-decoration-none">
-      <img class="text-decoration-none" src="../images/Float-Boat-Cert.png" />
-    </div>
-      <a href="Index.html">Home</a>
-      <a href="Subpages/AboutUs.html">About Us</a>
-      <a href="SubPages/MarineServices.html">Services</a>
-      <a href="SubPages/Locations.html">Locations</a>
-  </ul>
+  <!--Demo nav-bar switch as module -->
+  <div id="navContainer"></div>
+  <script src="../JS-Shared/nav-module.js"></script>
   <br/>
   <div class="text-align-center"> <!--Placholder for Bootstrap snippet-->
     <h1>Hello, Bootstrap!</h1>
@@ -26,7 +20,7 @@
   </div>
 
   <div class="image-container">
-    <img  src="../images/Float-Boat-Header.jpeg" />
+    <img class="responsive-img-container" src="../../images/Float-Boat-Header.jpeg" />
   </div>
   <br/>
 
@@ -43,7 +37,7 @@
     <a href="mailto:acox2@dom.edu">Contact Us!</a>
   </footer>
   
-  <script src="../src/JS-Shared/activities.js"></script>
+  <script src="../JS-Shared/index-activities.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
