--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -12,13 +12,15 @@
 <body class="text-decoration-none">
   <!--Demo nav-bar switch as module -->
   <div id="navContainer"></div>
-  <script src="../JS-Shared/nav-module.js"></script>
+    <script src="../JS-Shared/nav-module.js"></script>
   <br/>
-  <div class="text-align-center"> <!--Placholder for Bootstrap snippet-->
+  <!--Placholder for Bootstrap snippet-->
+  <div class="text-align-center"> 
     <h1>Hello, Bootstrap!</h1>
     <button class="btn btn-success" id="buttonClick">Click me to learn more! </button>
   </div>
-
+  <!--Main-Page Image-->
+  <br/>
   <div class="image-container">
     <img class="responsive-img-container" src="../../images/Float-Boat-Header.jpeg" />
   </div>
@@ -40,5 +42,6 @@
   <script src="../JS-Shared/index-activities.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+  <script src="../../../../../Downloads/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
