--- a/src/Pages/Locations.html
+++ b/src/Pages/Locations.html
@@ -24,5 +24,8 @@
   <footer>
     <a href="mailto:acox2@dom.edu">Contact Us!</a>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+  <script src="../../../../../Downloads/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
