--- a/src/Pages/MarineServices.html
+++ b/src/Pages/MarineServices.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" href="../Styling.css">
-    <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <title>Marine Services</title>
-</head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Style-Type" content="text/css">
+        <link rel="stylesheet" href="../Styling.css">
+        <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+
+            <title>Marine Services</title>
+    </head>
     <body>
-     <!--Demo nav-bar switch as module -->
-    <div id="navContainer"></div>
-    <div class="container">
-        <div class="column">
-            <h2 class="text-align-center">Visit us for this: </h2>
-            <ul>
-                <li>Mechanical services (our location or yours)</li>
-                <li>Winterizing / Summerizing</li>
-                <li>Painting / Fiberglass Repairs</li>
-                <li>Fiberglass and gel Repairs</li>
-                <li>Engine repair and Service</li>
-            </ul>
-        </div>
-        <div class="column">
-            <h2 class="text-align-center">Addtionally we can help with:</h2>
-            <ul>
-                <li>Storage, winter, summer, or long-term</li>
-                <li>Shrink-wrap services (on site only)</li>
-                <li>Boat drive service and repair</li>
-                <li>Boat collision repair</li>
-                <li>Windshield repair</li>
-            </ul>
-        </div>
-    </div>
-    <footer>
-        <a href="mailto:acox2@dom.edu">Contact Us!</a>
-    </footer>
-    <script src="../JS-Shared/nav-module.js"></script>
+        <!--Demo nav-bar switch as module -->
+        <div id="navContainer"></div>
+            <div class="container">
+                <div class="column">
+                    <h2 class="text-align-center">Visit us for this: </h2>
+                    <ul>
+                        <li>Mechanical services (our location or yours)</li>
+                        <li>Winterizing / Summerizing</li>
+                        <li>Painting / Fiberglass Repairs</li>
+                        <li>Fiberglass and gel Repairs</li>
+                        <li>Engine repair and Service</li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h2 class="text-align-center">Addtionally we can help with:</h2>
+                    <ul>
+                        <li>Storage, winter, summer, or long-term</li>
+                        <li>Shrink-wrap services (on site only)</li>
+                        <li>Boat drive service and repair</li>
+                        <li>Boat collision repair</li>
+                        <li>Windshield repair</li>
+                    </ul>
+                </div>
+            </div>
+        <footer>
+            <a href="mailto:acox2@dom.edu">Contact Us!</a>
+        </footer>
+        <script src="../JS-Shared/nav-module.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+        <script src="../../../../../Downloads/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
