Wk-2-ResponsiveGridDesign-NavModule-Update

--- a/src/Pages/MarineServices.html
+++ b/src/Pages/MarineServices.html
@@ -12,26 +12,33 @@
     <body>
         <!--Demo nav-bar switch as module -->
         <div id="navContainer"></div>
-            <div class="container">
-                <div class="column">
-                    <h2 class="text-align-center">Visit us for this: </h2>
-                    <ul>
-                        <li>Mechanical services (our location or yours)</li>
-                        <li>Winterizing / Summerizing</li>
-                        <li>Painting / Fiberglass Repairs</li>
-                        <li>Fiberglass and gel Repairs</li>
-                        <li>Engine repair and Service</li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <h2 class="text-align-center">Addtionally we can help with:</h2>
-                    <ul>
-                        <li>Storage, winter, summer, or long-term</li>
-                        <li>Shrink-wrap services (on site only)</li>
-                        <li>Boat drive service and repair</li>
-                        <li>Boat collision repair</li>
-                        <li>Windshield repair</li>
-                    </ul>
+        <!--Demo flexible/responsive grid -->
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-10 col-lg-8">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h2 class="text-align-center">Visit us for this: </h2>
+                                <ul class="list-unstyled">
+                                    <li>Mechanical services (our location or yours)</li>
+                                    <li>Winterizing / Summerizing</li>
+                                    <li>Painting / Fiberglass Repairs</li>
+                                    <li>Fiberglass and gel Repairs</li>
+                                    <li>Engine repair and Service</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h2 class="text-align-center">Addtionally we can help:</h2>
+                                <ul class="list-unstyled">
+                                    <li>Storage, winter, summer, or long-term</li>
+                                    <li>Shrink-wrap services (on site only)</li>
+                                    <li>Boat drive service and repair</li>
+                                    <li>Boat collision repair</li>
+                                    <li>Windshield repair</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         <footer>
