FloatBoat-CleanedUp-Wk3

--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -19,6 +19,19 @@
     <h1>Hello, Bootstrap!</h1>
     <button class="btn btn-success" id="buttonClick">Click me to learn more! </button>
   </div>
+  <div class="container mt-5">
+    <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading text-align-center">Who we are: </h4>
+        <p>Essential boat maintenance goes beyond a visual inspection of your boat every time you head out. 
+          You’ll also want to care for your boat after every outing, as well as follow a regular maintenance schedule. </p>
+        <hr>
+        <p class="mb-0">Fortunately, many upkeep-related tasks are manageable for most boat owners and do not require a mechanic. 
+          However, if you do find you need assistance or a major repair, we recommend turning to the us so you can enjoy your boat safely. 
+        </p>
+        <a class="text-success fw-bold" href="ContactForm.html"> Please contact us here to submit your request!</a>
+    </div>
+</div>
+
   <!--Main-Page Image-->
   <br/>
   <div class="image-container">
@@ -36,7 +49,7 @@
     As a <b>proud ABYC</b> member and Master Facility, our operations ensure high standards of quality and safety.  our personnel are trained in a wide variety of marine equipment and are committed to performing quality work in an industry where reliability and experience have grown increasingly difficult to secure.
   </p>
   <footer>
-    <a href="mailto:acox2@dom.edu">Contact Us!</a>
+    <a href="ContactForm.html">Contact Us!</a>
   </footer>
   
   <script src="../JS-Shared/index-activities.js"></script>
