--- a/src/Pages/Locations.html
+++ b/src/Pages/Locations.html
@@ -12,17 +12,37 @@
    <!--Demo nav-bar switch as module -->
     <div id="navContainer"></div>
     <script src="../JS-Shared/nav-module.js"></script>
-  <h1 class="text-align-center"> Locations </h1>
-  <p class="text-align-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula ex sit amet sapien scelerisque, ac eleifend justo consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras porta vehicula orci. Duis ac odio nec elit vehicula efficitur sit amet nec orci. Phasellus id velit ac sapien tincidunt tempor. Sed vitae ipsum sit amet metus convallis rhoncus. Sed nec dolor sit amet mi convallis fermentum. Nulla facilisi. Vivamus vulputate non erat eu gravida. Suspendisse potenti. In hac habitasse platea dictumst. Mauris pharetra sit amet risus id vestibulum. Proin fermentum arcu non felis ullamcorper, a pulvinar neque gravida. Nullam efficitur tortor eu eros scelerisque, ac varius velit consectetur.
 
-    Pellentesque eu purus scelerisque, mattis tortor non, consectetur tortor. Ut dapibus lacinia dolor, a ultricies tellus suscipit id. Donec feugiat erat ut dui consequat convallis. Mauris ut ante nec lacus tincidunt consequat. Quisque nec ipsum vitae libero iaculis luctus. Vestibulum sit amet felis sollicitudin, iaculis lorem non, aliquam velit. Nam quis massa sapien. Fusce sit amet vestibulum enim. Ut in lorem sapien. Cras et leo in ligula congue ultricies. Fusce ullamcorper dolor non mauris malesuada suscipit.
-    
-    Aenean vulputate ex vel arcu tristique, et tincidunt sapien fermentum. Nulla facilisi. Integer vestibulum dignissim arcu. Morbi vel convallis eros. Sed dictum velit at gravida sodales. Sed vestibulum, ligula sed luctus commodo, dolor mi blandit elit, non congue eros metus ut ipsum. Ut ullamcorper rutrum nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse rutrum mi et augue tincidunt, vitae varius nisi consectetur. In sed nunc rutrum, vestibulum libero et, placerat ligula.
-    
-    Nunc dapibus magna vitae justo feugiat, et volutpat magna bibendum. Integer pharetra nulla in ex dapibus sollicitudin. Suspendisse potenti. Proin id placerat ex, nec volutpat dui. Sed id leo nunc. Vivamus nec sagittis lacus, non sodales velit. Ut quis fermentum velit. Aliquam auctor justo quis mi ultrices, sed pellentesque velit dictum. Vestibulum suscipit turpis a tortor laoreet, et vehicula sapien tincidunt. Integer ullamcorper lacus non enim cursus, a congue mi commodo.
-  </p>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-8">
+              <div class="row">
+                  <div class="col-md-6">
+                      <div class="alert alert-info" role="alert">
+                          <h3 class="alert-heading text-center">Three Chicagoland Locations!</h3>
+                          <b class="text-center d-block">Northside, Downtown, and Southside</b>
+                          <hr>
+                          <p class="mb-0">
+                              <b>Hours: </b> Wednesday-Sunday 6am-7pm*
+                          </p>
+                          <hr>
+                          <p>*By request only: Monday/Tuesday</p>
+                          <hr>
+                          <a class="text-success fw-bold" href="ContactForm.html">Please contact us here to submit your request!</a>
+                      </div>
+                  </div>
+                  <div class="col-md-6">
+                      <div class="image-container">
+                          <img class="img-fluid" src="../../images/Float-Boat-2024-Chicagoland-Locations.png" alt="Float Boat Chicago">
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </br>
   <footer>
-    <a href="mailto:acox2@dom.edu">Contact Us!</a>
+    <a href="ContactForm.html"">Contact Us!</a>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
