--- a/src/Pages/MarineServices.html
+++ b/src/Pages/MarineServices.html
@@ -28,7 +28,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <h2 class="text-align-center">Addtionally we can help:</h2>
+                                <h2 class="text-align-center">Additionally we can help:</h2>
                                 <ul class="list-unstyled">
                                     <li>Storage, winter, summer, or long-term</li>
                                     <li>Shrink-wrap services (on site only)</li>
@@ -42,7 +42,7 @@
                 </div>
             </div>
         <footer>
-            <a href="mailto:acox2@dom.edu">Contact Us!</a>
+            <a href="ContactForm.html"">Contact Us!</a>
         </footer>
         <script src="../JS-Shared/nav-module.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
