Submit-Page-Init

--- a/src/Pages/AboutUs.html
+++ b/src/Pages/AboutUs.html
@@ -21,7 +21,7 @@
         <i>For all your boating needs now and into the future... </i>
         <hr>
         <p class="mb-0">
-          <b>You get</b>: Decades of certified experience with a friendly attitude! We're here to help, and that's the Float Boat way!
+          <b> What You get: </b>Decades of certified experience with a friendly attitude! We're here to help, and that's the Float Boat way!
         </p>
     </div>
   </div>
