--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -10,44 +10,42 @@
   <title>Float Boat Marine Services</title>
 </head>
 <body class="text-decoration-none">
+
   <!--Demo nav-bar switch as module -->
-  <div id="navContainer"></div>
+  <div id="navContainer"> <br/></div>
     <script src="../JS-Shared/nav-module.js"></script>
+  <!--Main-Page Image-->
   <br/>
-  <!--Placholder for Bootstrap snippet-->
-  <div class="text-align-center"> 
-    <h1>Hello, Bootstrap!</h1>
-    <button class="btn btn-success" id="buttonClick">Click me to learn more! </button>
+  <div class="image-container">
+    <img class="responsive-img-container" src="../../images/Float-Boat-Header.jpeg" />
   </div>
+  
+  <!-- Demo using a a callout style function w/ css-->
   <div class="container mt-5">
-    <div class="alert alert-success" role="alert">
-        <h4 class="alert-heading text-align-center">Who we are: </h4>
+    <div class="alert alert-success text-align-center" role="alert">
+        <h4 class="alert-heading">Who we are: </h4>
+        <p>
+          We're a <b>proud ABYC</b> member and Master-Certified Facility!
+        </p>
+        <a class="text-success fw-bold" href="ContactForm.html"> Please contact us here to submit your request!</a>
+        <hr>
         <p>Essential boat maintenance goes beyond a visual inspection of your boat every time you head out. 
           You’ll also want to care for your boat after every outing, as well as follow a regular maintenance schedule. </p>
         <hr>
         <p class="mb-0">Fortunately, many upkeep-related tasks are manageable for most boat owners and do not require a mechanic. 
           However, if you do find you need assistance or a major repair, we recommend turning to the us so you can enjoy your boat safely. 
         </p>
-        <a class="text-success fw-bold" href="ContactForm.html"> Please contact us here to submit your request!</a>
+        <hr>
+
     </div>
 </div>
 
-  <!--Main-Page Image-->
-  <br/>
-  <div class="image-container">
-    <img class="responsive-img-container" src="../../images/Float-Boat-Header.jpeg" />
+  <!--Placholder for Bootstrap snippet-->
+  <div class="text-align-center"> 
+    <h1>Hello, Bootstrap!</h1>
+    <button class="btn btn-success" id="buttonClick">Click me to learn more! </button>
   </div>
   <br/>
-
-  <p class="text-align-center">
-    Float Your Boat Again Repair Services is a nationally accredited, licensed, and insure marine repair organization.  
-    We are committed to providing our customers with timely and affordable repairs and service.  
-    Our customers will attest to our reliability and integrity as marine mechanics.  your can bring your boat to us or we can come to you.  
-    <i>Yes, we make house calls! </i>
-  </p>
-  <p class="text-align-center">
-    As a <b>proud ABYC</b> member and Master Facility, our operations ensure high standards of quality and safety.  our personnel are trained in a wide variety of marine equipment and are committed to performing quality work in an industry where reliability and experience have grown increasingly difficult to secure.
-  </p>
   <footer>
     <a href="ContactForm.html">Contact Us!</a>
   </footer>
