--- a/src/Pages/Locations.html
+++ b/src/Pages/Locations.html
@@ -18,7 +18,7 @@
           <div class="col-12 col-md-10 col-lg-8">
               <div class="row">
                   <div class="col-md-6">
-                      <div class="alert alert-info" role="alert">
+                      <div class="alert alert-info text-center" role="alert">
                           <h3 class="alert-heading text-center">Three Chicagoland Locations!</h3>
                           <b class="text-center d-block">Northside, Downtown, and Southside</b>
                           <hr>
@@ -29,6 +29,12 @@
                           <p>*By request only: Monday/Tuesday</p>
                           <hr>
                           <a class="text-success fw-bold" href="ContactForm.html">Please contact us here to submit your request!</a>
+                          <hr>
+                          <p class="text-align-center">
+                            As a <b>proud ABYC</b> member and Master Facility, our operations ensure high standards of quality and safety.  
+                            Our personnel are trained in a wide variety of marine equipment and are committed to 
+                            performing quality work in an industry where reliability and experience have grown increasingly difficult to secure.
+                          </p>
                       </div>
                   </div>
                   <div class="col-md-6">
