--- a/src/Pages/MarineServices.html
+++ b/src/Pages/MarineServices.html
@@ -28,7 +28,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <h2 class="text-align-center">Additionally we can help:</h2>
+                                <h2 class="text-align-center">And also this! </h2>
                                 <ul class="list-unstyled">
                                     <li>Storage, winter, summer, or long-term</li>
                                     <li>Shrink-wrap services (on site only)</li>
