--- a/src/Pages/ContactForm.html
+++ b/src/Pages/ContactForm.html
@@ -13,17 +13,113 @@
 
     <div id="navContainer"></div>
       <script src="../JS-Shared/nav-module.js"></script>
-    <br/>
-        <!--Demo creating your html form-->
-    <h3 class="text-align-center"> Hello HTML-Forms! </h3>
+      <!--Demo creating your html form-->
+    <form class="custom-container text-align-center text-white" action="Submit.html" method="post">
+      <h4 class="text-align-center text-white"> Float Boat: Submit a Request! </h3>
+        <label for="first_name">First Name:</label><br>
+        <input type="text" id="first_name" name="first_name" required><br><br>
 
+        <label for="last_name">Last Name:</label><br>
+        <input type="text" id="last_name" name="last_name" required><br><br>
 
-    <footer>
-        <a href="ContactForm.html">Contact Us!</a>
-    </footer>
-      
+        <label for="address">Address:</label><br>
+        <input type="text" id="address" name="address" required><br><br>
+
+        <label for="city">City:</label><br>
+        <input type="text" id="city" name="city" required><br><br>
+        <!--Cox note: demo dropdown !-->
+        <label for="states">State:</label>
+        <select id="states-list" name="state" required>
+        </select>
+        <br><br>
+        <!-- Demo a regex for email validation -->
+        <label for="email">Email Address:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+  
+        <label for="mobile">Mobile Phone Number:</label><br>
+        <input type="tel" id="mobile" name="mobile" required><br><br>
+
+        <label for="contact_method">Preferred Contact Method:</label><br>
+        <input type="radio" id="contact_email" name="contact_method" value="email" required>
+        <label for="contact_email">Email</label><br>
+        <input type="radio" id="contact_text" name="contact_method" value="text" required>
+        <label for="contact_text">Text Message</label><br><br>
+
+        <input type="submit" value="Submit" href="Submit.html">
+        <br><br>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="../../../../../Downloads/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+<!--Cox todo: add js to standalone-script file to demo best-practice-->
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+      const stateSelect = document.getElementById('states-list');
+      const stateOptions = `
+          <option value="">Select a state</option>
+          <option value="AL">Alabama</option>
+          <option value="AK">Alaska</option>
+          <option value="AZ">Arizona</option>
+          <option value="AR">Arkansas</option>
+          <option value="CA">California</option>
+          <option value="CO">Colorado</option>
+          <option value="CT">Connecticut</option>
+          <option value="DE">Delaware</option>
+          <option value="FL">Florida</option>
+          <option value="GA">Georgia</option>
+          <option value="HI">Hawaii</option>
+          <option value="ID">Idaho</option>
+          <option value="IL">Illinois</option>
+          <option value="IN">Indiana</option>
+          <option value="IA">Iowa</option>
+          <option value="KS">Kansas</option>
+          <option value="KY">Kentucky</option>
+          <option value="LA">Louisiana</option>
+          <option value="ME">Maine</option>
+          <option value="MD">Maryland</option>
+          <option value="MA">Massachusetts</option>
+          <option value="MI">Michigan</option>
+          <option value="MN">Minnesota</option>
+          <option value="MS">Mississippi</option>
+          <option value="MO">Missouri</option>
+          <option value="MT">Montana</option>
+          <option value="NE">Nebraska</option>
+          <option value="NV">Nevada</option>
+          <option value="NH">New Hampshire</option>
+          <option value="NJ">New Jersey</option>
+          <option value="NM">New Mexico</option>
+          <option value="NY">New York</option>
+          <option value="NC">North Carolina</option>
+          <option value="ND">North Dakota</option>
+          <option value="OH">Ohio</option>
+          <option value="OK">Oklahoma</option>
+          <option value="OR">Oregon</option>
+          <option value="PA">Pennsylvania</option>
+          <option value="RI">Rhode Island</option>
+          <option value="SC">South Carolina</option>
+          <option value="SD">South Dakota</option>
+          <option value="TN">Tennessee</option>
+          <option value="TX">Texas</option>
+          <option value="UT">Utah</option>
+          <option value="VT">Vermont</option>
+          <option value="VA">Virginia</option>
+          <option value="WA">Washington</option>
+          <option value="WV">West Virginia</option>
+          <option value="WI">Wisconsin</option>
+          <option value="WY">Wyoming</option>
+      `;
+      stateSelect.innerHTML = stateOptions;
+  });
+</script>
+<script>
+
+document.addEventListener("DOMContentLoaded", function() {
+    // Get the contact form element
+    const contactForm = document.getElementById('contactForm');
+      contactForm.addEventListener('submit', function(event) {
+          event.preventDefault();
+          window.location.href = this.action; //re-direct to submit-page
+    });
+});
+</script>
