Add-Submit-Page

--- a/src/Pages/Submit.html
+++ b/src/Pages/Submit.html
@@ -9,6 +9,7 @@
   <title> Submit Account </title>
 </head>
 <body>
+    <!--Cox note: Fix nav bug: -->
     <div id="navContainer"></div>
     <script src="../JS-Shared/nav-module.js"></script>
     <!-- Demo basic login form: -->
