Submit-Page-Completed-Init

--- a/src/Pages/AboutUs.html
+++ b/src/Pages/AboutUs.html
@@ -11,11 +11,12 @@
 <body>
   <!--Demo nav-bar switch as module -->
   <div id="navContainer"></div>
+  <!--Simple layout demo for about page: -->
   <h1 class="text-align-center"> About Us </h1>
   <div class="image-container">
     <img class="responsive-img-container" src="../../images/Electric-Boat-Img.webp" />
   </div>
-  <div class="container mt-5">
+  <div class="container mt-5 text-center">
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading text-align-center"> Float Boat Marine Services has got your boat! </h4>
         <i>For all your boating needs now and into the future... </i>
@@ -28,6 +29,8 @@
   <br/>
   <footer>
     <a href="ContactForm.html"">Contact Us!</a>
+    <br/>
+    <p>&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2024</p>
   </footer>
   <script src="../JS-Shared/nav-module.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
