--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -48,6 +48,8 @@
   <br/>
   <footer>
     <a href="ContactForm.html">Contact Us!</a>
+    <br/>
+    <p>&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2024</p>
   </footer>
   
   <script src="../JS-Shared/index-activities.js"></script>
