--- a/src/Pages/Locations.html
+++ b/src/Pages/Locations.html
@@ -49,6 +49,8 @@
   </br>
   <footer>
     <a href="ContactForm.html"">Contact Us!</a>
+    <br/>
+    <p>&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2024</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
