--- a/src/Pages/Submit.html
+++ b/src/Pages/Submit.html
@@ -13,34 +13,48 @@
     <div id="navContainer"></div>
     <script src="../JS-Shared/nav-module.js"></script>
     <!-- Demo basic login form: -->
-    <div class="container login-container">
-        <div class="login-form">
-            <h4 class="text-center"> Float Boat members login: </h4>
-            <form action="/login" method="post">
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
+    <div class="container-fluid">
+        <div class="row">
+
+            <!-- Left Column: Logo -->
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <img class="responsive-img-logo" src="../../images/FloatBoat-Logo.png" alt="Float Boat Logo">
+            </div>
+            <!-- Right Column: Login Form -->
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <div class="login-container">
+                    <div class="login-form text-white">
+                        <h4 class="text-center">Float Boat Members Login:</h4>
+                        <form action="/login" method="post">
+                            <div class="form-group">
+                                <label for="username">Username:</label>
+                                <input type="text" class="form-control" id="username" name="username" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <button type="submit" class="btn btn-success btn-block">Login</button>
+                            <div class="text-center mt-3">
+                                <a href="#">Forgot Password?</a>
+                            </div>
+                            <div class="text-center mt-3">
+                                <a href="#">Create an Account</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <button type="submit" class="btn btn-success btn-block">
-                    Login
-                </button>
-                <div class="text-center mt-3">
-                    <a href="#">Forgot Password?</a>
-                </div>
-                <div class="text-center mt-3">
-                    <a href="#">Create an Account</a>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
+    <h1 class="text-align-center"> Thanks for Visiting Us!</h1>
+    <footer>
+        <p class="text-center">&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2024</p>
+    </footer>
 
     <!-- Bootstrap JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="../../../../../Downloads/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
