Fix-Nav-Collapse-Bug

--- a/src/Pages/ContactForm.html
+++ b/src/Pages/ContactForm.html
@@ -53,7 +53,6 @@
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="../../../../../Downloads/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 <!--Cox todo: add js to standalone-script file to demo best-practice-->
@@ -61,7 +60,7 @@
   document.addEventListener("DOMContentLoaded", function() {
       const stateSelect = document.getElementById('states-list');
       const stateOptions = `
-          <option value="">Select a state</option>
+          <option value="">Select state: </option>
           <option value="AL">Alabama</option>
           <option value="AK">Alaska</option>
           <option value="AZ">Arizona</option>
