Wk-3-Clean-Up-Containers-Add-Border-Curves

--- a/src/Pages/AboutUs.html
+++ b/src/Pages/AboutUs.html
@@ -14,7 +14,7 @@
   <!--Simple layout demo for about page: -->
   <h1 class="text-align-center"> About Us </h1>
   <div class="image-container">
-    <img class="responsive-img-container" src="../../images/Electric-Boat-Img.webp" />
+    <img class="responsive-img-logo" src="../../images/Electric-Boat-Img.webp" />
   </div>
   <div class="container mt-5 text-center">
     <div class="alert alert-success" role="alert">
