--- a/src/Pages/Locations.html
+++ b/src/Pages/Locations.html
@@ -39,7 +39,7 @@
                   </div>
                   <div class="col-md-6">
                       <div class="image-container">
-                          <img class="img-fluid" src="../../images/Float-Boat-2024-Chicagoland-Locations.png" alt="Float Boat Chicago">
+                          <img class="img-fluid border-round" src="../../images/Float-Boat-2024-Chicagoland-Locations.png" alt="Float Boat Chicago">
                       </div>
                   </div>
               </div>
