States-List-Refactor

--- a/src/Pages/Submit.html
+++ b/src/Pages/Submit.html
@@ -49,6 +49,8 @@
     </div>
     <h1 class="text-align-center"> Thanks for Visiting Us!</h1>
     <footer>
+        <a href="ContactForm.html"">Contact Us!</a>
+        <br/>
         <p class="text-center">&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2024</p>
     </footer>
 
