--- a/src/Pages/ContactForm.html
+++ b/src/Pages/ContactForm.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <link rel="stylesheet" href="../Styling.css">
-  <!--Demo directory nav to Bootstrap ref below: -->
-  <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-  <title>Float Boat Marine Services</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Style-Type" content="text/css">
+    <link rel="stylesheet" href="../Styling.css">
+    <!--Demo directory nav to Bootstrap ref below: -->
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <title>Float Boat Marine Services</title>
 </head>
 <body class="text-decoration-none">
 
