--- a/src/Pages/Index.html
+++ b/src/Pages/Index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" href="../Styling.css">
   <!--Demo directory nav to Bootstrap ref below: -->
-  <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <title>Float Boat Marine Services</title>
 </head>
 <body class="text-decoration-none">
