--- a/src/Pages/Submit.html
+++ b/src/Pages/Submit.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="stylesheet" href="../Styling.css">
-  <link rel="stylesheet" href="../../../../../Downloads/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <title> Submit Account </title>
 </head>
 <body>
