--- a/src/Pages/AboutUs.html
+++ b/src/Pages/AboutUs.html
@@ -16,7 +16,7 @@
   <div class="image-container">
     <img class="responsive-img-logo" src="../../images/Electric-Boat-Img.webp" />
   </div>
-  <div class="container mt-5 text-center">
+  <div class="container mt-5 text-center aboutus-section">
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading text-align-center"> Float Boat Marine Services has got your boat! </h4>
         <i>For all your boating needs now and into the future... </i>
@@ -30,7 +30,7 @@
   <footer>
     <a href="ContactForm.html"">Contact Us!</a>
     <br/>
-    <p>&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2024</p>
+    <p>&copy;Float Boat: 'Mint Green Edition' A.P. Cox 2025</p>
   </footer>
   <script src="../JS-Shared/nav-module.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
